GNOME Bugzilla – Bug 696894
missing mnemonics
Last modified: 2013-05-03 10:09:08 UTC
In Epiphany 3.8.0, the application menu items 'Personal Data' and 'Preferences' have no keyboard mnemonics. They should have them for consistency with the other items in the menu.
Created attachment 240708 [details] [review] fix Here's a fix.
I've pushed this trivial fix. Closing.