Added missing mnemonics in application menu.

https://bugzilla.gnome.org/show_bug.cgi?id=696894